--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,35 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: #FFF;
+}
+
+html,body{
+  min-height: 100vh;
+  height: 100%;
+  background-color: #1c1c1c;
+}
+
+img{
+  max-width: 100%;
+}
+
+button{
+  font-weight: bold;
+  font-size: 1.2rem;
+  cursor: pointer;
+  padding: .8rem 1.3rem;
+  background: linear-gradient(90deg, rgba(3,87,116,1) 0%, rgba(2,29,96,1) 100%);
+  border-radius: 3rem;
+  border: none;
+}
+
+button:hover{
+  background: linear-gradient(90deg, rgba(2,29,96,1) 0%, rgba(3,87,116,1) 100%);
 }
 
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -17,4 +42,4 @@
   button {
     background-color: #f9f9f9;
   }
-}
+} */
